# MLGaze_Viewer

./: .gitignore  CLAUDE.md  README.md  extract_frames.py  pyproject.toml  timestamp_utils.py  visualize_gaze.py
config/: default_config.yaml
plugins/: __init__.py  example_plugin.py
scripts/: visualize.py
src/: __init__.py
src/analytics/: __init__.py  aoi_analyzer.py  base.py  base_gaze_processor.py  gaze_3d_clustering.py  gaze_3d_heatmap.py  gaze_object_interaction.py  object_detector.py  object_instance_tracker.py
src/core/: __init__.py  config.py  coordinate_utils.py  data_types.py  metadata.py  session.py
src/plugin_sys/: __init__.py  base.py  exceptions.py  manager.py  registry.py
src/sensors/: __init__.py  base.py  camera.py  gaze.py  imu.py
src/ui/: config_app.py  styles.tcss
src/utils/: __init__.py  data_loader.py  logger.py  mlcf_extractor.py  session_utils.py  timestamp_analysis.py  timestamp_sync.py
src/visualization/: __init__.py  visualizer.py
ui/: __init__.py  config_app.py
